_sass/index.scss
/* ... */
.flexbox-full {
  display: flex;
  flex-direction: row;
  flex-flow: row wrap;
}

.item {
  width: $col-width;
  margin: 16px;
}

.logo-small {
  height: $logo-small;
  margin-bottom: 4px;
}

.image-medium {
  height: $medium-image-height;
}

.title {
  letter-spacing: $title-letter-spacing;
  font-weight: lighter;
}

.img-responsive {
  display: block;
  max-width: 100%;
}

#review-navigator {
  width: 100%;
  div {
    height: 15px;
    width: 15px;
    border-radius: 50%;
    border-style: solid;
    border-width: 1px;
    color: $primary-color-darker-darker;
    display: inline-block;
    &.selected {
      background-color: $primary-color-darker-darker;
    }
  }
}

.navigation-arrows {
  position: absolute;
  top: 49%;
  border: solid $primary-color;
  border-width: 0 2px 2px 0;
  padding: 3px;
  font-size: 4em;
  width: 18px;
  height: 18px;
  z-index: 2;
  cursor: pointer;
}

.navigation-arrow-left {
  transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  left: 8%;
  &:hover {
    transform: rotate(135deg) scale(1.3);
  }
}

@keyframes navigation-arrow-left {
  50% {
    left: 7%;
  }
  100% {
    left: 7.5%;
  }
}

.navigation-arrow-right {
  transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  right: 8%;
  &:hover {
    transform: rotate(-45deg) scale(1.3);
  }
}

@keyframes navigation-arrow-right {
  50% {
    right: 7%;
  }
  100% {
    right: 7.5%;
  }
}

.review-slideshow {
  background: linear-gradient(to bottom, #fbf9fa, #d4d2d3);
  color: gray;
  text-align: center;
  font-size: 1.5em;
  padding: 16px 12px;
  .inner {
    position: relative;
    max-width: 1200px;
    margin: 0 auto;
  }

  .review::before {
    content: '';
    display: inline-block;
    height: 100%;
    vertical-align: middle;
  }

  .review div {
    vertical-align: middle;
    display: inline-block;
  }

  .review {
    padding-top: 33px;
    text-align: center;
    p {
      max-width: 800px;
      vertical-align: middle;
      font-size: .5em;
      padding: 12px;
      text-align: left;
      display: inline-block;
      strong {
        text-transform: uppercase;
      }
    }
    img {
      display: inline-block;
      margin-top: -4%;
      z-index: 25;
      width: 100px;
      border-style: solid;
      border-radius: 500px;
      border-color: white;
      box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
    }
  }
}

.learn-more {
  max-width: 164px;
  cursor: pointer;
}

.services-info {
  position: relative;
  background-color: $primary-color;
  color: white;
  .services-content {
    max-width: 1800px;
    margin: 0 auto;
    height: 100%;
  }
}

.services-header {
  font-size: 3em;
  padding-left: 80px;
}

.services-row {
  display: flex;
  align-items: stretch;
}

.services-text {
  display: inline-block;
  padding: 3em 3em 3em 80px;
  opacity: .9 ;
  width: 33%;
}

.service-description {
  padding: 1.5em 0;
}

.services-1 {
  background-color: $primary-color-darker-darker;
}

.services-2 {
  background-color: $primary-color-lighter;
}

.social {
  position: absolute;
  right: 20px;
  bottom: 60px;
  font-size: 1.5em;
  text-align: right;
  line-height: 1;
  a {
    padding: 0.5em;
    padding-right: 0;
  }
}
.footer {
  .inner {
    max-width: $page-max-width;
    margin: 0 auto;
    padding-left: $left-align-home;
  }
  position: relative;
  width: 100%;
  background: $primary-color;
  color: white;
  & > * { line-height: 2.2; }
  .column {
    font-size: 1.2em;
    display: inline-block;
    vertical-align: top;
    margin: 1% 5% 0 0;
    .title {
      font-weight: bold;
      > a {
        text-decoration: none;
        color: white;
        display: block;
        font-size: 100%;
        opacity: 1;
        font-weight: bold;
      }
    }
    a {
      text-decoration: none;
      color: inherit;
      display: block;
      font-size: 85%;
      img {
        color: white;
        width: 1em;
      }
    }
    &.copyright {
      display: block;
      padding-top: 30px;
      opacity: .7;
    }
    &.social {
      float: right;
      margin-right: 20px;
      font-size: 1.5em;
      text-align: right;
      line-height: 1;
      a {
        padding: 0.5em;
        padding-right: 0;
      }
    }
  }
}

.icon-small {
  width: 38px;
  margin-right: 8px;
}

#listings-arrow-left {
  left: -158px;
  top: 66px;
}

#listings-arrow-right {
  left: 374px;
  top: 66px;
}

.listings-arrow {
  position: absolute;
  width: 300px;
}

.simple-close {
  @include close-button;
  z-index: 10;
  background-size: 18px 18px;
  padding: 31px;
  cursor: pointer;

}

.simple-close-small {
  @include close-button-small;
}

.to-top {
  @include hamburger-menu;
  background-image: url(../images/scroll-arrow-up.png);
  position: absolute !important;
  top: auto;
  bottom: 10px !important;
  right: 10px !important;
  height: 2em;
}

.arrow-up {
  width: 100%;
  transform: rotate(180deg);
  overflow: hidden;
}

@media screen and (max-height: 700px) {
  .service-detail {
    width: 100% !important;
    height: 100% !important;
    overflow: scroll;
    .inner {
      max-width: 100%;
      width: 100%;
      height: 100%;
      margin: 0;
      padding: 0;
      .form {
        margin: 0;
        > p {
          padding-top: 20px;
          font-size: 1.8em;
        }
      }
    }
  }
}
@media screen and (min-width: $page-max-width) {
  body {
    font-size: 18px;
  }
}

@media screen and (max-width: $breakpoint-medium) {
  .property-preview {
    width: 69%;
    opacity: 1;
    position: relative;
    font-size: 1.3em;
    overflow: scroll;
    &.selected {
      transform: scale(1);
    }
  }
}
/* ... */

